--- a/index.html
+++ b/index.html
@@ -30,31 +30,37 @@
   </head>
   <body>
     <div id="container" class="container-fluid">
+
       <!-- HEAD -->
-      <div class="container">
-        <div id="head">
-          <h1>
-            Sorteio
-            <span class="small">de A-Z</span>
-          </h1>
+      <nav class="navbar navbar-expand-lg navbar-dark ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <h1>
+              Sorteio
+              <span class="small">de A-Z</span>
+            </h1>
+          </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="https://github.com/gustavodsv/sorteio_AZ" target="_blank">Info</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
+      </nav>
 
       <!-- BODY -->
       <div id="body" class="container text-center">
-        <div id="box">☆</div>
-        <button id="button" onclick="Sorteio()">Sortear</button>
+        <div id="box" onclick="Sorteio()">☆</div>
+        <!-- <form name="form">
+          <input type="text" name="letras" class="input">
+          <button id="button" onclick="validar()">Remover</button>
+        </label> -->
       </div>
 
-      <!-- FOOTER -->
-      <div id="footer" class="container-fluid text-center">
-        <span>
-          Developed by
-            <a href="https://github.com/gustavodsv" target="_blank">
-              Gustavo V.
-            </a>
-        </span>
-      </div>
+
+
     </div>
     <script src="script.js"></script>
   </body>
